# hic-data-comp

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  analysislib.cpp  analysislib.h  configure  configure.ac  configure.scan  dataComp.cpp  dataComp.h  dctrltestlib.cpp  dctrltestlib.h  digiscanlib.cpp  digiscanlib.h  hiclib.cpp  hiclib.h  menulib.cpp  menulib.h  noisescanlib.cpp  noisescanlib.h  powertestlib.cpp  powertestlib.h  threscanlib.cpp  threscanlib.h  treevariables.h  utillib.cpp  utillib.h
Macros/: README  chipProfileTemp.C  chipSiteTemp.C  reg700Plots.C
